modified index page, search bar, search result page, navbar content, welcome controller, places controller, places coffee script, etc.

--- a/Back_On_Rails/app/assets/stylesheets/application.scss
+++ b/Back_On_Rails/app/assets/stylesheets/application.scss
@@ -17,6 +17,11 @@
  @import "bootstrap-sprockets";
  @import "bootstrap";
 
+ html, body {
+   height: 100%;
+ }
+ 
 footer {
   position: relative;
+  text-align: center;
 }
