--- a/Back_On_Rails/app/assets/stylesheets/items.scss
+++ b/Back_On_Rails/app/assets/stylesheets/items.scss
@@ -2,7 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-
 .thumb {
   height: 75px;
   border: 1px solid #000;
@@ -38,4 +37,6 @@
   padding-bottom: 15px;
 }
 
-
+.item_look_up_container {
+  height: 90%;
+}
