--- a/Back_On_Rails/app/views/places/show.html.erb
+++ b/Back_On_Rails/app/views/places/show.html.erb
@@ -1,6 +1,6 @@
 <header><h1 class="display-4"><%= @place.address %></h1></header>
 
-<p>Address: <%= @place.address %></p>
+<!-- <p>Address: <%= @place.address %></p> -->
 <!-- <p>Coordinates: <%= @place.latitude %> <%= @place.longitude %></p> -->
 
 <table class="table table-striped">
