--- a/Back_On_Rails/app/assets/stylesheets/welcome.scss
+++ b/Back_On_Rails/app/assets/stylesheets/welcome.scss
@@ -16,38 +16,24 @@ $navbar-default-bg: black;
 	text-align: center;
 }
 
+.index_container {
+	height: 100%;
+}
+
 #line{
 	color: #fff;
 	font-weight: bold;
 }
 
-.jumbotron{
-
-	height: 550px;
-
-}
-
-.jumbotron h1{
-	text-align: center;
-	margin-bottom: 30px;
-	letter-spacing: -1px;
-	font-weight: bold;
-	position: absolute;
-	top: 40%;
-	left: 50%;
-	-moz-transform: translateX(-50%) translateY(-50%);
-	-webkit-transform: translateX(-50%) translateY(-50%);
-	transform: translateX(-50%) translateY(-50%);
-}
-
 footer {
-	position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-    line-height: 60px;
+	position: relative;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
 	background-color: white;
 }
+
 ul{
 	list-style: none;
 }
@@ -56,5 +42,95 @@ li{
 	display: inline;
 }
 
+#index_map {
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+	position: absolute;
+}
 
+.index_item_look_up {
+	position: absolute;
+  top: 100px;
+	left: 130px;
+	z-index: 2;
+}
 
+.index_navbar {
+	position: absolute !important;
+	z-index: 3 !important;
+	width: 100% !important;
+	background-color: rgba(255, 255, 255, 0) !important;
+  border: 0px !important;
+}
+
+.index_navbar a {
+	font-size: 20px !important;
+	font-weight: bold !important;
+	color: rgba(0, 42, 92, 0.7) !important;
+}
+
+.index_navbar .dropdown-menu a:hover {
+	// font-size: 20px !important;
+	// color: black !important;
+	// font-weight: bold !important;
+	background-color: rgba(0, 42, 92, 0.5) !important;
+	color: rgba(0, 42, 92, 0.7) !important;
+}
+
+.index_navbar .dropdown-toggle {
+	background-color: rgba(0, 0, 0, 0) !important;
+}
+
+.index_navbar .dropdown-menu {
+	background-color: rgba(255, 255, 255, 0.7) !important;
+}
+
+.index_navbar #logo {
+	font-size: 35px !important;
+	color: rgba(0, 42, 92, 0.7) !important;
+}
+
+.search {
+    &__container {
+        padding-top: 64px;
+    }
+
+    &__input {
+        width: 100%;
+        padding: 12px 24px;
+
+        background-color: transparent;
+        transition: transform 250ms ease-in-out;
+        font-size: 14px;
+        line-height: 18px;
+
+        // color: #575756;
+        background-color: rgba(0, 42, 92, 0.4);
+        background-repeat: no-repeat;
+        background-size: 18px 18px;
+        background-position: 95% center;
+        border-radius: 50px;
+        // border: 1px solid #575756;
+				border: 1px;
+        transition: all 250ms ease-in-out;
+        backface-visibility: hidden;
+        transform-style: preserve-3d;
+
+        &::placeholder {
+            color: color(#000000 a(0.8));
+            text-transform: uppercase;
+            letter-spacing: 1.5px;
+        }
+
+        &:hover,
+        &:focus {
+            padding: 12px 0;
+            outline: 0;
+            border: 1px solid transparent;
+            border-bottom: 1px;
+            border-radius: 0;
+            background-position: 100% center;
+        }
+    }
+}
