--- a/app/views/items/_lookup.html.erb
+++ b/app/views/items/_lookup.html.erb
@@ -2,7 +2,11 @@
   <%= form_tag search_items_path, method: :get, id: 'item-lookup-form' do %>
     <div class="form-group">
       <div class="form-group row no-padding text-center col-md-12">
-        <div class="col-md-10">
+        <div class="col-md-1">
+          <%= select_tag "tag_id", content_tag(:option,'All',:value=>'')+
+              options_from_collection_for_select(Tag.all, "id", "name", params[:tag_id]) %>
+        </div>
+        <div class="col-md-9">
           <%= text_field_tag :search_item, params[:search_item],
                               placeholder: "item name or description",
                               class: "form-control" %>
