--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -25,7 +25,14 @@
               <div class="item-description">
                 <div><%= truncate(item.description, length: 100) %></div>
               </div>
-              <div>Owned by: <%= item.user.username%></div>
+              <div>Owned by: <%= item.user.username%>
+              <% if item.tags.any? %>
+                | Tags:
+                <% item.tags.each do |tag| %>
+                    <%= link_to tag.name, tag_path(tag) %>
+                <% end %>
+              <% end %>
+              </div>
               <div class="article-actions">
                 <div>
                   <%= link_to 'Show', item_path(item), class: "btn btn-xs btn-info"  %>
