ran RAILS_ENV=production rake assets:precompile for deployment, regenerated secret_key and master key

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -91,6 +91,10 @@ li{
 	color: rgba(0, 42, 92, 0.7) !important;
 }
 
+.search__container #tag_id {
+	display: none;
+}
+
 .search {
     &__container {
         padding-top: 64px;
