add about and FAQ page without styling

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,11 +2,11 @@
   <div>
     <nav>
       <ul>
-        <li><%= link_to "About | ", welcome_about_path %></li>   
-        <li><%= link_to "privacy policy | ", welcome_privacy_policy_path %></li>
-        <li><%= link_to "FAQ | ", welcome_faq_path %></li>  
+        <li><%= link_to "About  ", welcome_about_path %></li>|
+        <li><%= link_to "privacy policy  ", welcome_privacy_policy_path %></li>|
+        <li><%= link_to "FAQ  ", welcome_faq_path %></li>|
         <li><%= link_to "Contact Us", welcome_contact_us_path %></li>
       </ul>
-    </nav> 
+    </nav>
   </div>
 </footer>
