--- a/app/views/transactions/lend_history_index.html.erb
+++ b/app/views/transactions/lend_history_index.html.erb
@@ -1,4 +1,4 @@
-<div class = "center">
+<div class = "container center" style = "width: 95%;">
 	<div class="col-xs-6 manage_index">
 		<h2>YOUR LEND HISTORY</h2>
 		<p class="lead" style="font-size: 18px;">
