--- a/app/views/transactions/edit.html.erb
+++ b/app/views/transactions/edit.html.erb
@@ -1,4 +1,4 @@
-<div class = "center">
+<div class = "container center" style = "width: 95%;">
 	<div class="col-xs-6">
 		<h1>EDIT TRANSACTION</h1>
 		<%= render 'error_messages' %>
