undefined reference fix in notificartions

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,10 +2,10 @@
   <div>
     <nav>
       <ul>
-        <li><%= link_to "About  ", welcome_about_path %></li>|
-        <li><%= link_to "privacy policy  ", welcome_privacy_policy_path %></li>|
-        <li><%= link_to "FAQ  ", welcome_faq_path %></li>|
-        <li><%= link_to "Contact Us", welcome_contact_us_path %></li>
+        <li><%= link_to "About  ", main_app.welcome_about_path %></li>|
+        <li><%= link_to "privacy policy  ", main_app.welcome_privacy_policy_path %></li>|
+        <li><%= link_to "FAQ  ", main_app.welcome_faq_path %></li>|
+        <li><%= link_to "Contact Us", main_app.welcome_contact_us_path %></li>
       </ul>
     </nav>
   </div>
