fixed bug in show_items page

--- a/app/views/items/show_items.html.erb
+++ b/app/views/items/show_items.html.erb
@@ -19,7 +19,7 @@
                         <%= item.name %>
                     </td>
                     <td>
-                        <%= friend.description %>
+                        <%= item.description %>
                     </td>
 				</tr>
 			<% end %>
@@ -28,6 +28,6 @@
 <% else %>
 	<div align = "center">
 		<h2>This user does not have any item!</h2>
-	</div>	
+	</div>
 <%end%>
 </div>
