--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <div class="index_container">
 
   <nav class="navbar navbar-default index_navbar">
-  	<div class="container-fluid">
+    <div class="container-fluid">
   		<!-- Brand and toggle get grouped for better mobile display -->
   		<div class="navbar-header">
   			<%= link_to "Back on Rails", main_app.root_path, class: "navbar-brand", id: "logo" %>
@@ -9,7 +9,37 @@
 
   		<!-- Collect the nav links, forms, and other content for toggling -->
   		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+  			<ul class="nav navbar-nav">
+  				<li><%= link_to "Browse all Items", main_app.items_path %></li>
+  				<li><%= link_to "Browse all Users", main_app.users_path %></li>
+          <li><%= link_to "All tags", main_app.tags_path %></li>
+  			</ul>
   			<ul class="nav navbar-nav navbar-right">
+  				<% if session[:user_id] != nil %>
+  					<li class="dropdown">
+  						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Manage Your Items<span class="caret"></span></a>
+  						<ul class="dropdown-menu">
+  							<li><a href="#">Your Listed Items</a></li>
+  							<li role="separator" class="divider"></li>
+  							<li><%= link_to 'Borrowed Items', main_app.borrow_transactions_path %></li>
+  							<li><%= link_to 'Lent Items', main_app.lend_transactions_path %></li>
+  						</ul>
+  					</li>
+  					<li>
+  					</li>
+  					<li class="dropdown">
+  						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Transactions<span class="caret"></span></a>
+  						<ul class="dropdown-menu">
+  							<li><%= link_to 'Pending Transactions', main_app.pending_transactions_path %></li>
+  							<li role="separator" class="divider"></li>
+  							<li><%= link_to 'View Borrow History', main_app.borrow_transactions_history_path %></li>
+  							<li><%= link_to 'View Lend History', main_app.lend_transactions_history_path %></li>
+  						</ul>
+  					</li>
+  					<li><%= link_to Notification.unread_count(current_user), main_app.notifications_path, class: "glyphicon glyphicon-bell", style: "font-size: 120%;" %></li>
+  					<input type="hidden" id="unread_count" value="<%= Notification.unread_count(current_user) %>">
+  				<% end  %>
+
   				<li>
   					<% if session[:user_id] == nil %>
   						<li class="dropdown">
@@ -33,6 +63,7 @@
   					<% elsif session[:user_id] == nil%>
 
   					<% else %>
+
   						<li class="dropdown">
   							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" font-weight= "bold" id = "line">
   							Welcome! <%= current_user.username %><span class="caret"></span></a>
@@ -46,22 +77,6 @@
   								<li align = "center"><%= link_to 'My addresses', main_app.my_places_path %></li>
   								<li role="separator" class="divider"></li>
   								<li align = "center"><%= link_to 'Log out', main_app.logout_path, method: :delete %></li>
-
-                  <li role="separator" class="divider"></li>
-                  <li align = "center"><%= link_to Notification.unread_count(current_user), main_app.notifications_path, class: "glyphicon glyphicon-bell", style: "font-size: 120%;" %></li>
-        					<input type="hidden" id="unread_count" value="<%= Notification.unread_count(current_user) %>">
-                  <li role="separator" class="divider"></li>
-                  <li align = "center"><a href="#">Your Listed Items</a></li>
-    							<li role="separator" class="divider"></li>
-    							<li align = "center"><%= link_to 'Borrowed Items', main_app.borrow_transactions_path %></li>
-                  <li role="separator" class="divider"></li>
-    							<li align = "center"><%= link_to 'Lent Items', main_app.lend_transactions_path %></li>
-                  <li role="separator" class="divider"></li>
-                  <li align = "center"><%= link_to 'Pending Transactions', main_app.pending_transactions_path %></li>
-    							<li role="separator" class="divider"></li>
-    							<li align = "center"><%= link_to 'View Borrow History', main_app.borrow_transactions_history_path %></li>
-                  <li role="separator" class="divider"></li>
-    							<li align = "center"><%= link_to 'View Lend History', main_app.lend_transactions_history_path %></li>
   							</ul>
   						</li>
   					<% end %>
