Optimized front end codes of search bar and forms. Fixed no places bug for item creating, now a place is required for new item. And also provided a button to create places under the item form if no places found for user-friendly.

--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -40,3 +40,11 @@
 .item_look_up_container {
   height: 90%;
 }
+
+.field_with_errors {
+  @extend .has-error;
+}
+
+#item-lookup .search_sub_part {
+  padding: 0px;
+}
