--- a/app/views/simple_calendar/_month_calendar.html.erb
+++ b/app/views/simple_calendar/_month_calendar.html.erb
@@ -10,7 +10,7 @@
   </div>
 
   <table class="table table-striped table-bordered table-hover">
-    <caption style="caption-side: bottom;">Test Caption</caption>
+    <caption style="caption-side: bottom;">Item Calendar</caption>
     <thead>
       <tr>
         <% date_range.slice(0, 7).each do |day| %>
