--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -14,10 +14,11 @@
 </div><br/><br/>
 
 <div>Average Rating: <%= sprintf('%.2f', @item.get_average_rating) %>/5</div>
-<%= link_to 'View Item Reviews', item_item_reviews_path(@item) %></br>
-
+<% if current_user %>
+	<%= link_to 'View Item Reviews', item_item_reviews_path(@item) %></br>
+<% end %>
 <%= link_to 'back to items', items_path %></br>
-<% if current_user != @item.user %>
+<% if current_user && current_user != @item.user %>
 	<% if @all_item_borrowers.include?(current_user)%>
 		<%= link_to 'Review this Item', new_item_item_review_path(@item) %></br>
 	<% end %>
