--- a/app/views/item_reviews/index.html.erb
+++ b/app/views/item_reviews/index.html.erb
@@ -41,7 +41,9 @@
 
         <br>
         <div class="col-sm-7">
-            <span class="pull-left"><%= link_to 'Review this item', new_item_item_review_path(@item), class: "btn btn-primary" %></span>
+            <% if logged_in? %>
+                <span class="pull-left"><%= link_to 'Review this item', new_item_item_review_path(@item), class: "btn btn-primary" %></span>
+            <% end %>
             <span class="pull-right"><%= link_to 'Back to Item Description', item_path(@item), class: "btn btn-default" %></span>
         </div>
 
