--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,2 +1,65 @@
-<h1>PasswordResets#edit</h1>
-<p>Find me in app/views/password_resets/edit.html.erb</p>
+<% provide(:title, 'Reset password') %>
+
+
+<br/><br/><br/><h1 align="center">Reset password</h1>
+
+<div class="container">
+
+  <% if @user.errors.any? %>
+    <div class="row">
+      <div class="col-xs-8 col-xs-offset-2">
+        <div class="panel panel-danger">
+          <div class="panel-heading">
+            <h2 class="panel-title">
+              <%= pluralize(@user.errors.count, "error") %>
+            </h2>
+            <div class="panel-body">
+              <ul>
+                <% @user.errors.full_messages.each do |message| %>
+                  <li><%= message %></li>
+                <% end %>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  <% end %>
+
+  <%= form_for(@user, :html => {class: "form-horizontal", role: "form"}, url: password_reset_path(params[:id])) do |f| %>
+
+    <div class='row'>
+      <div class='col-xs-12'>
+
+        <%= hidden_field_tag :email, @user.email %>
+
+        <div class="form-group">
+          <div class="control-label col-sm-2">
+            <%= f.label :password %>
+          </div>
+          <div class="col-sm-8">
+            <%= f.password_field :password, class: "form-control" %>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="control-label col-sm-2">
+            <%= f.label :password_confirmation %>
+          </div>
+          <div class="col-sm-8">
+            <%= f.password_field :password_confirmation, class: "form-control" %>
+          </div>
+        </div>
+
+
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <%= f.submit "Update password", class: 'btn btn-primary btn-lg' %>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  <% end %>
+
+</div>
