added some rspec testing for transactions

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,7 +10,7 @@
 			<ul class="nav navbar-nav">
 				<li><%= link_to "Browse all Items", main_app.items_path %></li>
 				<li><%= link_to "Browse all Users", main_app.users_path %></li>
-        		<li><%= link_to "All tags", main_app.tags_path %></li>
+        		<li><%= link_to "All Tags", main_app.tags_path %></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<% if session[:user_id] != nil %>
