--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -3,6 +3,7 @@
 
 	<div>
 		<strong>Description: </strong><%= @item.description %><br/>
+		<strong>Owned by: </strong><%= link_to @item.user.username, user_path(@item.user) %><br/>
 		<strong>Located at: </strong><%= link_to @item.place.address, place_path(@item.place) %><br/>
 		<div>
 			<%=@item.item_pictures.length %>
@@ -49,3 +50,6 @@
 		<%= link_to 'Delete', item_path(@item), method: :delete, data: {confirm: "Are you sure?"} %>
 	<% end %>
 </div>
+
+
+
