--- a/app/views/welcome/privacy_policy.html.erb
+++ b/app/views/welcome/privacy_policy.html.erb
@@ -6,7 +6,7 @@
 <p>Effective date: November 30, 2018</p>
 
 
-<p>Back On Rails ("us", "we", or "our") operates the  back-on-rails.herokuapp.com website
+<p>Back On Rails ("us", "we", or "our") operates the  https://back-on-rails.herokuapp.com website
   (hereinafter referred to as the "Service").</p>
 
 <p>This page informs you of our policies regarding the collection, use, and disclosure of
