styling change in about, privacy policy, terms of service and FAQ pages

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,21 +1,21 @@
-<div>We are Computer Engineering Students from University of Toronto.</div>
-<div>This website is the project assigned by Professor Michael Stumm from CSC444</div>
+<div class="container">
+  <h1>About Us</h1>
+  <p>We are Computer Engineering Students from University of Toronto.</p>
 
+    <p>Our project goal is to design and implement a website that helps people to borrow something or lend out stuff to others.
+    </p>
 
-<div>
-  <h3>Our project goal is to design and implement a website that helps people to borrow something or lend out stuff to others.
-  </h3>
-  <div class = "about-image-1">
-    image here
-  </div>
+  <p>
+    This website is totally free to use. You can also make real friends on this website!
+  </p>
+
+  <p>
+  Many people lend stuff to others so that the others don't have to buy it. It is nice of them to do
+  that, and it makes them feel good.
+  </p>
+
+  <p>
+  If you want to use something your friends already have, you can borrow from them. Otherwise you need to pay for the stuff
+      and have a place to store it.
+  </p>
 </div>
-
-<div><h3>
-  This website is totally free to use. You can also make real friends on this website!
-</h3>
-  <div class = "about-image-1">
-    image here
-  </div>
-</div>
-
-
