--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -44,7 +44,10 @@
 	        <p><%=link_to "View Reviews of this User", user_user_reviews_path(@user), class: "btn btn-xl btn-primary" %></p>
 			<% if logged_in? %>
 		    	<p><%=link_to "Review this User", new_user_user_review_path(@user), class: "btn btn-xl btn-primary" %></p>
-			<% end %>
+      <% end %>
+      <% if @user.id == session[:user_id] && @user.provider == "facebook" %>
+		    	<p><%=link_to "Deauthorize", user_path(@user), method: :delete, data: {confirm: "Are you sure you want to deauthorize your account?"}, class: "btn btn-xl btn-primary" %></p>
+      <% end %>
         </div>
       </div>
 
