--- a/app/views/item_reviews/new.html.erb
+++ b/app/views/item_reviews/new.html.erb
@@ -17,19 +17,19 @@
 
                                 <span class="rating">
                                     <%= form.radio_button :rating, 5, class: "rating-input", id: :star5, checked: true %>
-                                    <%= label_tag :star5, '5', class: "rating-star" %>
+                                    <%= label_tag :star5, '', class: "rating-star" %>
 
                                     <%= form.radio_button :rating, 4, class: "rating-input", id: :star4 %>
-                                    <%= label_tag :star4, '4', class: "rating-star" %>
+                                    <%= label_tag :star4, '', class: "rating-star" %>
 
                                     <%= form.radio_button :rating, 3, class: "rating-input", id: :star3 %>
-                                    <%= label_tag :star3, '3', class: "rating-star" %>
+                                    <%= label_tag :star3, '', class: "rating-star" %>
 
                                     <%= form.radio_button :rating, 2, class: "rating-input", id: :star2 %>
-                                    <%= label_tag :star2, '2', class: "rating-star" %>
+                                    <%= label_tag :star2, '', class: "rating-star" %>
 
                                     <%= form.radio_button :rating, 1, class: "rating-input", id: :star1 %>
-                                    <%= label_tag :star1, '1', class: "rating-star" %>
+                                    <%= label_tag :star1, '', class: "rating-star" %>
                                 </span>
                             </div>
                         </div>
