--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -91,7 +91,7 @@
       <%= form_tag search_items_path, method: :get, id: 'item-lookup-form' do %>
         <div class="search__container">
           <%= text_field_tag :search_item, params[:search_item],
-                              placeholder: "item name or description",
+                              placeholder: "Need to borrow something? Your neighbours might have it! Search for item here. ",
                               class: "search__input" %>
           <%= select_tag "tag_id", content_tag(:option,'All',:value=>'') +
 							options_from_collection_for_select(Tag.all, "id", "name", params[:tag_id]) %>
