--- a/app/views/transactions/_error_messages.html.erb
+++ b/app/views/transactions/_error_messages.html.erb
@@ -1,16 +1,20 @@
     <% if flash[:errors] %>
-        <div class="modal-dialog col-xs-4">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title">Invalid Form</h4>
-                </div>
-                <div class="modal-body">
-                    <ul>
-                        <% flash[:errors].each do |message| %>
-                            <div align="left"><%= message %></div>
-                        <% end %>
-                    </ul>
-                </div>
+      <div class = "row">
+        <div class = "col-xs-8 col-xs-offset-2">
+          <div class = "panel panel-danger">
+            <div class="panel-heading">
+              <h2 class = "panel-title">
+                The form contains <%= pluralize(flash[:errors].count, "error") %>.
+              </h2>
+              <div class = "panel-body">
+                <ul>
+                  <% flash[:errors].each do |message| %>
+                    <li><%= message %></li>
+                  <% end %>
+                </ul>
+              </div>
             </div>
+          </div>
         </div>
+      </div>
     <% end %>
