--- a/app/views/item_reviews/index.html.erb
+++ b/app/views/item_reviews/index.html.erb
@@ -55,7 +55,7 @@
                     <% @item.item_reviews.each do |review| %>
     					<div class="row">
     						<div class="col-sm-3">
-    							<img src="http://dummyimage.com/60x60/666/ffffff&text=No+Image" class="img-rounded">
+                                <div><%= image_tag review.user.profile.profile_picture.url, class: 'picture-in-index' if review.user.profile.profile_picture? %></div>
     							<div class="review-block-name"><a href="#"><%= link_to "#{review.user.username}", user_path(review.user) %></a></div>
     							<div class="review-block-date"><%= review.updated_at.strftime("%Y-%m-%d") %><br/></div>
     						</div>
@@ -77,8 +77,17 @@
     							<div class="review-block-description col-sm-9"><%= review.comment %></div>
                                 <div class="col-sm-3">
                                     <% if review.user == current_user %>
-                                        <%= link_to 'Edit Review', edit_item_item_review_path(@item, review) %></br>
-                                        <%= link_to 'Delete Review', item_item_review_path(@item, review), method: :delete %></br>
+                                        <%= link_to edit_item_item_review_path(@item, review),
+                                            'data-toggle': 'tooltip', title: 'Edit your review', 'data-placement': 'right',
+                                            class: "btn btn-warning" do %>
+                                                <small><span class="glyphicon glyphicon-pencil"></span></small>
+                                            <% end %>
+                                        <%= link_to item_item_review_path(@item, review), method: :delete,
+                                            data: {confirm: "Are you sure you want to delete this review?"},
+                                            'data-toggle': 'tooltip', title: 'Delete your review', 'data-placement': 'right',
+                                            class: "btn btn-danger" do %>
+                                                <small><span class="glyphicon glyphicon-remove"></span></small>
+                                            <% end %>
                                     <% end %>
                                 </div>
     						</div>
