--- a/app/views/user_reviews/index.html.erb
+++ b/app/views/user_reviews/index.html.erb
@@ -60,7 +60,7 @@
             <% @reviewee.reviews_of_self.each do |review| %>
                 <div class="row">
                     <div class="col-sm-3">
-                        <img src="http://dummyimage.com/60x60/666/ffffff&text=No+Image" class="img-rounded">
+                        <div><%= image_tag review.user.profile.profile_picture.url, class: 'picture-in-index' if review.user.profile.profile_picture? %></div>
                         <div class="review-block-name"><a href="#"><%= link_to "#{review.user.username}", user_path(review.user) %></a></div>
                         <div class="review-block-date"><%= review.updated_at.strftime("%Y-%m-%d") %><br/></div>
                     </div>
@@ -82,8 +82,17 @@
                         <div class="review-block-description col-sm-9"><%= review.comment %></div>
                         <div class="col-sm-3">
                             <% if review.user == current_user %>
-                                <td><%= link_to 'Edit Review', edit_user_user_review_path(@reviewee, review) %></td>
-                                <td><%= link_to 'Delete Review', user_user_review_path(@reviewee, review), method: :delete %></td>
+                                <%= link_to edit_user_user_review_path(@reviewee, review),
+                                    'data-toggle': 'tooltip', title: 'Edit your review', 'data-placement': 'right',
+                                    class: "btn btn-warning" do %>
+                                        <small><span class="glyphicon glyphicon-pencil"></span></small>
+                                    <% end %>
+                                <%= link_to user_user_review_path(@reviewee, review), method: :delete,
+                                    data: {confirm: "Are you sure you want to delete this review?"},
+                                    'data-toggle': 'tooltip', title: 'Delete your review', 'data-placement': 'right',
+                                    class: "btn btn-danger" do %>
+                                        <small><span class="glyphicon glyphicon-remove"></span></small>
+                                    <% end %>
                             <% end %>
                         </div>
                     </div>
