--- a/app/views/user_reviews/index.html.erb
+++ b/app/views/user_reviews/index.html.erb
@@ -58,49 +58,54 @@
         <hr/>
         <div class="col-sm-1"></div>
         <div class="review-block col-sm-10">
-            <% @reviewee.reviews_of_self.each do |review| %>
-                <div class="row">
-                    <div class="col-sm-3">
-                        <div class='row'><%= image_tag review.user.profile.profile_picture.url, class: 'picture-in-index' if review.user.profile.profile_picture? %></div>
-                        <div class="review-block-name"><a href="#"><%= link_to "#{review.user.username}", user_path(review.user) %></a></div>
-                        <div class="review-block-date"><%= review.updated_at.strftime("%Y-%m-%d") %><br/></div>
-                    </div>
-                    <div class="col-sm-9">
-                        <div class="review-block-rate">
-                            <% for i in 1..5 %>
-                                <% if i<=review.rating %>
-                                    <button type="button" class="btn btn-warning btn-xs" aria-label="Left Align">
-                                      <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-                                    </button>
-                                <% else %>
-                                    <button type="button" class="btn btn-default btn-grey btn-xs" aria-label="Left Align">
-                                      <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-                                    </button>
-                                <% end %>
-                            <% end %>
-                        </div>
-                        <div class="review-block-title"><%= review.comment[0, 30] %></div>
-                        <div class="review-block-description col-sm-9"><%= review.comment %></div>
+            <% if @reviewee.reviews_of_self.any? %>
+                <% @reviewee.reviews_of_self.each do |review| %>
+                    <div class="row">
                         <div class="col-sm-3">
-                            <% if review.user == current_user %>
-                                <%= link_to edit_user_user_review_path(@reviewee, review),
-                                    'data-toggle': 'tooltip', title: 'Edit your review', 'data-placement': 'right',
-                                    class: "btn btn-warning" do %>
-                                        <small><span class="glyphicon glyphicon-pencil"></span></small>
+                            <div class='row'><%= image_tag review.user.profile.profile_picture.url, class: 'picture-in-index' if review.user.profile.profile_picture? %></div>
+                            <div class="review-block-name"><a href="#"><%= link_to "#{review.user.username}", user_path(review.user) %></a></div>
+                            <div class="review-block-date"><%= review.updated_at.strftime("%Y-%m-%d") %><br/></div>
+                        </div>
+                        <div class="col-sm-9">
+                            <div class="review-block-rate">
+                                <% for i in 1..5 %>
+                                    <% if i<=review.rating %>
+                                        <button type="button" class="btn btn-warning btn-xs" aria-label="Left Align">
+                                          <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+                                        </button>
+                                    <% else %>
+                                        <button type="button" class="btn btn-default btn-grey btn-xs" aria-label="Left Align">
+                                          <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+                                        </button>
                                     <% end %>
-                                <%= link_to user_user_review_path(@reviewee, review), method: :delete,
-                                    data: {confirm: "Are you sure you want to delete this review?"},
-                                    'data-toggle': 'tooltip', title: 'Delete your review', 'data-placement': 'right',
-                                    class: "btn btn-danger" do %>
-                                        <small><span class="glyphicon glyphicon-remove"></span></small>
-                                    <% end %>
-                            <% end %>
+                                <% end %>
+                            </div>
+                            <div class="review-block-title"><%= review.comment[0, 30] %></div>
+                            <div class="review-block-description col-sm-9"><%= review.comment %></div>
+                            <div class="col-sm-3">
+                                <% if review.user == current_user %>
+                                    <%= link_to edit_user_user_review_path(@reviewee, review),
+                                        'data-toggle': 'tooltip', title: 'Edit your review', 'data-placement': 'right',
+                                        class: "btn btn-warning" do %>
+                                            <small><span class="glyphicon glyphicon-pencil"></span></small>
+                                        <% end %>
+                                    <%= link_to user_user_review_path(@reviewee, review), method: :delete,
+                                        data: {confirm: "Are you sure you want to delete this review?"},
+                                        'data-toggle': 'tooltip', title: 'Delete your review', 'data-placement': 'right',
+                                        class: "btn btn-danger" do %>
+                                            <small><span class="glyphicon glyphicon-remove"></span></small>
+                                        <% end %>
+                                <% end %>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <hr/>
+                    <hr/>
+                <% end %>
+            <% else %>
+                <p class="lead center" style="font-size: 18px;">
+                    There are currently no reviews of this user...
+                </p>
             <% end %>
-
         </div>
         <div class="col-sm-1"></div>
       </div>
